# job-hunt

./: .antigravityignore  .gitignore  CLAUDE.md  README.md
tools/prep_for_cv_tail/: CLAUDE.md  Cargo.toml  README.md  tauri.conf.json
tools/prep_for_cv_tail/.claude/: settings.json
tools/prep_for_cv_tail/capabilities/: default.json
tools/prep_for_cv_tail/src/: lib.rs  main.rs
tools/prep_for_cv_tail/web/: app.js  index.html  styles.css
tools/py/: .gitignore  README.md  justfile  local_models_overview.md  pyproject.toml  ruff.toml
tools/py/config/: __init__.py  config.py  config.yaml
tools/py/cv/: README.md  __init__.py  justfile
tools/py/cv/example/: body.md  footer.md  header.md
tools/py/cv/prompts/: cover.md  tailor_for_description.md  tailor_for_title.md
tools/py/cv/tools/: .gitignore  __init__.py  cfg.py  checker.py  compose_cv.py  compose_cv_locally.py  compose_jobs_from_csv.py  create_cv_from_titles.py  feedback_loop.py  fixer.py  justfile  md2pdf.py  prepare_cv.py  prepare_llm_prompt.py  process_cv.py  pyproject.toml  tailor_body.py  tailor_cv_body.py  tailor_cv_locally.py  tailor_jobs_from_csv.py
tools/py/cv/tools/tests/: test_checker.py  test_fixer.py  test_process.py  test_tailor_body.py  test_tailor_cv_body.py
tools/py/cv/tools/tests/func/: test_feedback_loop.py  test_tailor_body.py
tools/py/data_fetching/ai_search/: justfile  ruff.toml
tools/py/data_fetching/ai_search/data/test/: manager.txt  moia.txt  sen_qa.txt
tools/py/data_fetching/ai_search/promptfoo/: assert_llm.py  run_eval.py
tools/py/data_fetching/ai_search/scraper/: __init__.py  fetch.py  indeed.py  stepstone_test.py
tools/py/helpers/: __init__.py  config.py  config.yaml  config_generator.py  constants.py  df_helper.py  gemini.py  io_helper.py  llm_helper.py  models.py  models_test.py  notebook.py  ollama_helper.py  ollama_helper_test.py  promptfoo_helper.py  telemetry.py  tmp_helper.py
tools/py/helpers/llm/: __init__.py  gemini.py  ollama.py
tools/py/helpers/llm/models/: README.md  gemma4_ctx16k  gemma4_e2b_ctx65k  gemma4_e2b_it_ctx65k  gemma4_e4b_it_ctx65k  justfile
tools/py/job_finder/: justfile  pyproject.toml
tools/py/job_finder/cli/: check_jd.py  fetch_and_match.py  llm_review.py
tools/py/job_finder/data/test/: tesla_go.txt
tools/py/job_finder/promptfoo/: assert_llm.py  models_analys.ipynb  run.py  run_eval.py
tools/py/job_finder/reviewer/: __init__.py  llm.py  llm_.py  llm_test.py  llm_with_pydantic.py  match.py
tools/py/job_finder/scraper/: base.py  base_test.py  fetch.py  indeed.py  indeed_test.py  linkedin.py  linkedin_test.py  stepstone.py  stepstone_test.py
tools/py/job_finder/scraper/tests/: base_test.py  indeed_test.py  linkedin_test.py  stepstone_test.py
tools/py/job_finder/tests/: base_test.py  fetch_test.py
tools/py/job_finder/tests/func/: indeed_test.py  llm_test.py
tools/py/job_finder/utils/: __init__.py  caching_utils.py  common_utils.py  env_utils.py
tools/py/md/: cli.py  format.py  format_test.py  models.py  models_test.py  parse.py  parse_test.py
tools/py/md_parser/: __init__.py  cli.py  models.py  models_test.py  parse.py  parse_test.py
tools/py/md_tools/: cli.py  format.py  format_test.py  models.py  models_test.py  parse.py  parse_test.py
tools/py/tailor_cv_eval/: .gitignore  README.md  config.py  config.yaml  justfile  pyproject.toml
tools/py/tailor_cv_eval/inputs/job1/: gt.md
tools/py/tailor_cv_eval/inputs/title1/: input.txt
tools/py/tailor_cv_eval/tools/: config_generator.py  ollama_helper.py  prepare.py
tools/py/tailor_cv_eval/tools/eval_diff_prompts/: justfile  result_analysis.ipynb  results_analysis.ipynb  run.py
tools/py/tailor_cv_eval/tools/eval_diff_prompts/prompts/: new.md  previous.md
tools/py/tailor_cv_eval/tools/eval_diff_prompts/results/: run3_3m_diff_options.html  run5_m4_2temps.html
tools/py/tailor_cv_eval/tools/eval_models_performance/: justfile  result_analysis.ipynb
tools/py/tailor_cv_eval/tools/eval_models_performance/results/: run1_mixed_options_and_models.html
tools/py/tailor_cv_eval/tools/eval_models_with_diff_options/: justfile  result_analysis.ipynb  run_all_models.py  run_single_model.py  view_results.ipynb
tools/py/tailor_cv_eval/tools/eval_models_with_diff_options/results/: run2_420combinations_1model.html
tools/py/tailor_cv_eval/tools/eval_performance/: justfile  result_analysis.ipynb  run_all_models.py  run_single_model.py
tools/py/tailor_cv_eval/tools/eval_performance/results/: run3_top4m_one_option.html
tools/py/tailor_cv_eval/tools/eval_quality_with_gt/: README.md  justfile  result_analysis.ipynb  run.py
tools/py/tailor_cv_eval/tools/eval_quality_with_gt/prompts/: not_fancy.md  previous.md  tone_style_part3_add_options.md
tools/py/tailor_cv_eval/tools/eval_quality_with_gt/results/: result_analysis.html  run10_m18_ollama_and_gemini.html  run1_1model_3options.html  run2_19m_t012_ctx_12_16.html  run4_m4_t001_ctx_12_16.html  run6_8m_5prompts.html  run6_m8_gt_only_latest_prompt.html  run7_m8_new_prompt.html  (+2 more)
tools/py/tailor_cv_eval/tools/model_check/: justfile  run_all_models.py  run_single_model.py  view_results.ipynb
tools/py/tailor_cv_eval/tools/models_cmp/: justfile
tools/py/tailor_cv_eval/tools/parameter_eval/: README.md  justfile  run.py  run_eval.py
tools/py/tailor_cv_eval/tools/prompt_eval/: run_eval.py
tools/py/tailor_ui/: app.py  config.yaml  justfile
tools/py/tests/: test_llm_helper.py  test_models.py  test_ollama_helper.py  test_promptfoo_helper.py
tools/py/ui_composer/: app.py  justfile
tools/tailor_cv_py/: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
tools/tailor_cv_py/.claude/: settings.json
tools/tailor_cv_py/src/tailor_cv/: cli.py  llm.py  llm_gemini.py  pdf.py  prompt.py  reader.py  text.py
tools/tailor_cv_py/src/tailor_cv/prompts/: cover_letter_system.txt  cover_letter_user.txt  cv_system.txt  cv_user.txt  default_footer.md  default_header.md
tools/tailor_cv_py/tests/: test_cli.py  test_llm.py  test_llm_gemini.py  test_pdf.py  test_prompt.py  test_reader.py  test_text.py
tools/tailor_cv_py/ui/: app.py
(+122 files in other folders)
