[package]
name = "prep_for_cv_tail"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prep_for_tail"
path = "src/main.rs"

[[bin]]
name = "prep_for_tail_ui"
path = "src/bin/ui.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.52", default-features = false }
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
serde_yaml = "0.9.34"
