[project]
name = "py"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.14.0",
    "deepeval>=1.2.0",
    "dotenv>=0.9.9",
    "giskard>=2.0.0",
    "griffe>=2.0.0",
    "jupyter>=1.1.1",
    "langchain-community<0.4.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index>=0.10.0",
    "loguru",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy<2.0.0",
    "odfpy>=1.4.1",
    "ollama",
    "pandas>=2.0.0",
    "pydantic-ai>=1.107.0",
    "pytest>=8.0.0",
    "pyyaml",
    "ragas>=0.1.0",
    "ruff",
    "scikit-criteria>=0.8.6",
    "scipy<1.12.0",
    "seaborn>=0.13.2",
    "selenium>=4.44.0",
    "setuptools>=70.0.0",
    "streamlit",
    "tabulate>=0.9.0",
    "tenacity>=9.1.4",
    "textgrad>=0.1.0",
    "tqdm>=4.68.2",
    "trulens-core>=1.0.0",
    "undetected-chromedriver==3.5.5",
    "webdriver-manager>=4.1.2",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools]
py-modules = ["process_cv"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["INP001", "D203", "D213", "COM812"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = ["S101", "FBT001", "D103"]
"**/test_*" = ["S101", "FBT001", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "scraper",
    "reviewer",
    # should be fixed
    "/home/kirill/prj/gl/playground",
    "/home/kirill/prj/gh/easelenium",
]
