[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailor-cv"
version = "0.1.0"
description = "Tailor a master CV to a specific job description using a local Ollama LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "loguru>=0.7",
    "ollama>=0.3",
    "google-genai>=0.8",
]

[project.scripts]
tailor_cv = "tailor_cv.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tailor_cv"]
artifacts = ["src/tailor_cv/prompts/*.txt"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.9",
]
ui = [
    "streamlit>=1.36",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
