[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "process-cv"
version = "0.1.0"
dependencies = [
    "loguru",
    "pyyaml",
    "ollama",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools]
py-modules = ["process_cv"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["INP001", "D203", "D213", "COM812"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/*_test.py" = ["S101", "FBT001", "D103"]
"**/test_*" = ["S101", "FBT001", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
